--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -463,6 +463,14 @@
 
                     </LinearLayout>
 
+                    <TextView
+                        android:id="@+id/txt_interv_reminder_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="@string/intervention_reminder_text"/>
+
                 </LinearLayout>
 
                 <!--Option: Repeat / Notification-->
