--- a/app/src/main/res/layout/intervention_element.xml
+++ b/app/src/main/res/layout/intervention_element.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:onClick="onIntervClick"
@@ -21,4 +21,15 @@
         android:text="@string/dummy"
         android:textColor="@color/black"
         android:textSize="18sp" />
-</LinearLayout>
+
+    <Button
+        android:id="@+id/btn_edit_interv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:layout_gravity="end|center_vertical"
+        android:onClick="editIntervClick"
+        android:text="@string/edit"
+        android:textColor="@color/dark_blue"
+        android:visibility="gone"/>
+</FrameLayout>
