--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        android:elevation="4dp" />
+        android:elevation="4dp"
+        app:title="MindNavigator"
+        app:titleTextColor="@color/white" />
 
     <LinearLayout
         android:id="@+id/one"
@@ -151,6 +154,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <GridLayout
             android:id="@+id/event_grid"
             android:layout_width="match_parent"
@@ -158,6 +162,7 @@
             android:columnCount="7"
             android:orientation="horizontal"
             android:rowCount="5" />
+
         <ImageButton
             android:id="@+id/btn_add_from_activity"
             android:layout_width="wrap_content"
@@ -169,9 +174,8 @@
             android:contentDescription="@string/app_name"
             android:elevation="2dp"
             android:onClick="onNewEventClick"
-            android:src="@drawable/img_add"/>
+            android:src="@drawable/img_add" />
     </FrameLayout>
-
 
 
 </LinearLayout>
